src/objects/ICCS_BankAccount_To_Case__c.object
<CustomObject>
    <description>A junction object containing a N-to-N between Bank Account and Case</description>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CaseStatus__c</fullName>
        <formula>TEXT(Case__r.Status)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CaseStatus</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>ICCS Bank Accounts</relationshipLabel>
        <relationshipName>ICCS_Bank_Accounts_To_Cases</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ICCS_Bank_Account__c</fullName>
        <label>ICCS Bank Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>ICCS_Bank_Account__c.Account__r.ACLI_Status__c</field>
                <operation>notEqual</operation>
                <value>Inactive Company</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ICCS_Bank_Account__c</referenceTo>
        <relationshipLabel>ICCS Bank Accounts To Cases</relationshipLabel>
        <relationshipName>ICCS_Bank_Accounts_To_Cases</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Notice_of_Assignment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Notice of Assignment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Percentage__c</fullName>
        <label>Percentage</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Split_type__c</fullName>
        <label>Split type</label>
        <picklist>
            <picklistValues>
                <fullName>Percentage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Balance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Total</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>caseTypeIsDelete__c</fullName>
        <formula>ISPICKVAL( Case__r.CaseArea__c , &apos;ICCS – Remove Product&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>caseTypeIsDelete</label>
        <type>Checkbox</type>
    </fields>
    <label>ICCS Bank Account To Case</label>
    <nameField>
        <displayFormat>BA-C-{yyyymm}{00000}</displayFormat>
        <label>ICCS Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ICCS Bank Accounts To Cases</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>BankAccountsBelongToCaseAccount</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(Case__r.AccountId =  ICCS_Bank_Account__r.Account__r.Id)</errorConditionFormula>
        <errorDisplayField>ICCS_Bank_Account__c</errorDisplayField>
        <errorMessage>The bank account chosen doesn&apos;t belong to the case account</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CurrencyMatchBankAccount</fullName>
        <active>true</active>
        <description>The currency must match the Bank Account currency.</description>
        <errorConditionFormula>TEXT(CurrencyIsoCode)  &lt;&gt;  
TEXT(ICCS_Bank_Account__r.CurrencyIsoCode)</errorConditionFormula>
        <errorDisplayField>CurrencyIsoCode</errorDisplayField>
        <errorMessage>The currency must match the Bank Account currency.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ICCSNoticeOfAssignmentCheck</fullName>
        <active>true</active>
        <description>The Notice Of Assignment flag can only be set if the selected account has its own Notice of Assignment flag set.</description>
        <errorConditionFormula>AND(
  ICCS_Bank_Account__r.Notice_of_Assignment__c = FALSE,
  Notice_of_Assignment__c = TRUE
)</errorConditionFormula>
        <errorDisplayField>Notice_of_Assignment__c</errorDisplayField>
        <errorMessage>The Notice of Assignment flag cannot be set, because the selected bank account doesn&apos;t have its Notice of Assignment flag set.</errorMessage>
    </validationRules>
</CustomObject>